# causal_calibration

./: .gitignore  notes.md  pyproject.toml
app/: main.py
notebooks/: 01_baseline_evaluation.ipynb  01_baseline_evaluation_old _version.ipynb  ResNet_attribution.ipynb
src/: RISE.py  attribution.py  calibration.py  causal_tests.py  generators.py  metrics.py  models.py  visualizations.py  visualize_tests.py
